--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Pixels Art</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <script src="script.js"></script>
+    <main>
+        <section id="color-palette">
+            <div class="color azul"></div>
+            <div class="color rosa"></div>
+            <div class="color roxo"></div>
+            <div class="color verde"></div>
+        </section>
+    </main>
 </body>
+
 </html>
