--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <script src="script.js"></script>
     <main>
         <section id="color-palette">
-            <div class="color azul"></div>
+            <div class="color preto"></div>
             <div class="color rosa"></div>
             <div class="color roxo"></div>
-            <div class="color verde"></div>
+            <div class="color azul"></div>
         </section>
     </main>
 </body>
