--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <script src="script.js"></script>
     <main>
         <section id="color-palette">
             <div class="color preto"></div>
@@ -19,7 +18,10 @@
             <div class="color roxo"></div>
             <div class="color azul"></div>
         </section>
+        <section id="pixel-board">
+        </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
