--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <main>
-        <section id="color-palette">
-            <div class="color preto"></div>
-            <div class="color rosa"></div>
-            <div class="color roxo"></div>
-            <div class="color azul"></div>
+        <section>
+            <div id="color-palette">
+                <div class="color preto"></div>
+                <div class="color rosa"></div>
+                <div class="color roxo"></div>
+                <div class="color azul"></div>
+            </div>
         </section>
         <section id="pixel-board">
         </section>
