--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <main>
         <section>
             <div id="color-palette">
-            <div class="color preto"></div>
-            <div class="color rosa"></div>
-            <div class="color roxo"></div>
-            <div class="color azul"></div>
-        </div>
+                <div class="color" id='preto'></div>
+                <div class="color" id="rosa"></div>
+                <div class="color" id="roxo"></div>
+                <div class="color" id="azul"></div>
+            </div>
         </section>
         <section id="pixel-board">
         </section>
