Oitavo e nono requisito

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <main>
         <section>
             <div id="color-palette">
-                <div class="color" id='preto'></div>
-                <div class="color" id="rosa"></div>
-                <div class="color" id="roxo"></div>
-                <div class="color" id="azul"></div>
+                <div class="color preto" ></div>
+                <div class="color rosa" ></div>
+                <div class="color roxo" ></div>
+                <div class="color azul" ></div>
             </div>
+           <div id="clear-board">
+               <button type="reset" class="button">Limpa</button>
+           </div>
         </section>
         <section id="pixel-board">
         </section>
+        
     </main>
     <script src="script.js"></script>
 </body>
