--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="color roxo" ></div>
                 <div class="color azul" ></div>
             </div>
-           <div id="clear-board">
-               <button type="reset" class="button">Limpa</button>
+           <div>
+               <button type="reset" class="button" id="clear-board">Limpa</button>
            </div>
         </section>
         <section id="pixel-board">
