nem acredito que consegui

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="color roxo" ></div>
                 <div class="color azul" ></div>
             </div>
-           <div>
+           <div id="botao">
                <button type="reset" class="button" id="clear-board">Limpa</button>
            </div>
         </section>
