ajeitando ultimos detalhes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="color azul" ></div>
             </div>
            <div id="botao">
-               <button type="reset" class="button" id="clear-board">Limpa</button>
+               <button type="reset" id="clear-board">Limpar</button>
            </div>
         </section>
         <section id="pixel-board">
