feat: adiciona novo background

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Pixels Art</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,18 +17,18 @@
     <main>
         <section>
             <div id="color-palette">
-                <div class="color preto" ></div>
-                <div class="color rosa" ></div>
-                <div class="color roxo" ></div>
-                <div class="color azul" ></div>
+                <div class="color preto"></div>
+                <div class="color rosa"></div>
+                <div class="color roxo"></div>
+                <div class="color azul"></div>
             </div>
-           <div id="botao">
-               <button type="reset" id="clear-board">Limpar</button>
-           </div>
+            <div id="botao">
+                <button type="button" id="clear-board">Limpar</button>
+            </div>
         </section>
         <section id="pixel-board">
         </section>
-        
+
     </main>
     <script src="script.js"></script>
 </body>
